# openrsync

./: .gitignore  CMakeLists.txt  compats.c  configure  externc.h  main.c  main.cpp  openrsync.cpp  socket.c  tests.c
openrsync/: openrsync.h
